--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,5 +7,25 @@
 	<welcome-file-list>
 		<welcome-file>login.jsp</welcome-file>
 	</welcome-file-list>
+	
+	<servlet>
+	  <servlet-name>Resteasy</servlet-name>
+	  <servlet-class>org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>
+	</servlet>
+	<servlet-mapping>
+	  <servlet-name>Resteasy</servlet-name>
+	  <url-pattern>/api/*</url-pattern>
+	</servlet-mapping>
+    <context-param>
+      <param-name>resteasy.scan</param-name>
+      <param-value>true</param-value>
+    </context-param>
+	<context-param>
+	  <param-name>resteasy.servlet.mapping.prefix</param-name>
+	  <param-value>/api</param-value>
+	</context-param>
+	<listener>
+	  <listener-class>org.jboss.resteasy.plugins.server.servlet.ResteasyBootstrap</listener-class>
+	</listener>
 
 </web-app>
